# tg-check-splitter

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  babel.cfg  docker-compose.yml  entrypoint.sh  nginx.conf.example  pyproject.toml
.agent-factory/: GOAL.md  README.md
.agent-factory/mcp-server/: package-lock.json  package.json
.agent-factory/phases/: phase.config.md
.agent-factory/scripts/: launch.sh  phase.sh  queue.sh
alembic/: env.py
alembic/versions/: 156dac2499c0_add_tip_percent_and_confirmed_to_.py  254284816472_add_paid_scans_to_user_quotas.py  4eb5c3f19b63_add_quantity_to_item_votes.py  5a1b2c3d4e5f_add_currency_to_sessions.py  bea57eb4c49e_initial_tables.py
api/: __main__.py  app.py  auth.py  deps.py  schemas.py  ws.py
api/routes/: ocr.py  quota.py  sessions.py  voting.py  ws.py
api/services/: notifications.py
bot/: __main__.py  config.py  db.py  i18n.py  middlewares.py  utils.py
bot/handlers/: admin.py  check.py  payment.py  start.py  voting.py
bot/keyboards/: admin.py  check.py  voting.py
bot/models/: __init__.py  payment.py  session.py  user_quota.py
bot/services/: calculator.py  ocr.py  quota.py  session.py
docs/plans/: 2026-02-16-check-splitter-design.md  2026-02-16-check-splitter-implementation.md  2026-02-21-mini-app-migration.md
tests/: conftest.py  test_calculator.py  test_models.py  test_ocr.py  test_quota.py  test_session_service.py  test_utils.py
tests/test_api/: conftest.py  (+9 more)
tools/: db_cleanup.sh
webapp/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+111 files in other folders)
